[gd_scene load_steps=15 format=3 uid="uid://brvtevyeux5rm"]

[ext_resource type="Script" uid="uid://xrlwmi7jowag" path="res://scripts/prestige_scene.gd" id="1_t1ktp"]
[ext_resource type="PackedScene" uid="uid://cmqq5tee3t843" path="res://prefabs/UpgradeNode.tscn" id="2_fpi2r"]
[ext_resource type="Texture2D" uid="uid://f1oqhb7bqccq" path="res://icons/magic-balls.png" id="3_nrupn"]
[ext_resource type="Texture2D" uid="uid://cgngbhqswoxqc" path="res://icons/ticket.png" id="4_gys6d"]
[ext_resource type="Texture2D" uid="uid://chlb3n35yq7hm" path="res://icons/cannon-plus-1.png" id="7_4u7hf"]
[ext_resource type="Texture2D" uid="uid://da72x02o23p7q" path="res://icons/mini-balls.png" id="8_q6rye"]
[ext_resource type="Texture2D" uid="uid://ctxumdqc41mo5" path="res://icons/double-money-earned.png" id="9_k677y"]
[ext_resource type="Texture2D" uid="uid://5o0p7pnu4sl0" path="res://icons/triple-money-earned.png" id="10_yeml4"]
[ext_resource type="Texture2D" uid="uid://mp5ca1feeap1" path="res://icons/quad-money-earned.png" id="11_h1bg3"]
[ext_resource type="Texture2D" uid="uid://cpb5me21ldg2e" path="res://icons/prizes-claimed-amount.png" id="12_36cdx"]
[ext_resource type="PackedScene" uid="uid://bnom3ilambl0v" path="res://prefabs/CustomButton.tscn" id="13_4u7hf"]
[ext_resource type="Theme" uid="uid://du2jkyh4el8aw" path="res://ui/GameSceneTheme.tres" id="31_4mkk5"]
[ext_resource type="LabelSettings" uid="uid://dcrxj6ropvsma" path="res://ui/LabelSettings/GameUILabelSettings.tres" id="32_qrlka"]
[ext_resource type="LabelSettings" uid="uid://cpd6oxhesfn23" path="res://ui/LabelSettings/GameUISmallLabel.tres" id="36_bkh2h"]

[node name="Prestige" type="Node2D"]
script = ExtResource("1_t1ktp")

[node name="UpgradeNodes" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 974.0
offset_top = 498.0
offset_right = 2474.0
offset_bottom = 1298.0
mouse_filter = 1

[node name="DoubleMoney" parent="UpgradeNodes" instance=ExtResource("2_fpi2r")]
upgrade = 29
texture = ExtResource("9_k677y")

[node name="TripleMoney2" parent="UpgradeNodes/DoubleMoney" instance=ExtResource("2_fpi2r")]
position = Vector2(0, 120)
upgrade = 30
texture = ExtResource("10_yeml4")

[node name="QuadtrupleMoney" parent="UpgradeNodes/DoubleMoney/TripleMoney2" instance=ExtResource("2_fpi2r")]
position = Vector2(0, 120)
upgrade = 31
texture = ExtResource("11_h1bg3")

[node name="MagicBalls" parent="UpgradeNodes/DoubleMoney" instance=ExtResource("2_fpi2r")]
position = Vector2(-120, 0)
upgrade = 32
texture = ExtResource("3_nrupn")

[node name="MiniBalls" parent="UpgradeNodes/DoubleMoney/MagicBalls" instance=ExtResource("2_fpi2r")]
position = Vector2(0, 120)
upgrade = 33
texture = ExtResource("8_q6rye")

[node name="BaseLevelValueX" parent="UpgradeNodes/DoubleMoney/MagicBalls" instance=ExtResource("2_fpi2r")]
position = Vector2(-120, 0)
upgrade = 42
texture = ExtResource("12_36cdx")

[node name="KeepMoneyOn" parent="UpgradeNodes/DoubleMoney/MagicBalls/BaseLevelValueX" instance=ExtResource("2_fpi2r")]
position = Vector2(-120, 0)
upgrade = 36
texture = ExtResource("4_gys6d")

[node name="ExtraCannon" parent="UpgradeNodes/DoubleMoney" instance=ExtResource("2_fpi2r")]
position = Vector2(0, -120)
upgrade = 35
texture = ExtResource("7_4u7hf")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
mouse_filter = 2
theme = ExtResource("31_4mkk5")

[node name="CenterContainer" type="CenterContainer" parent="UI"]
layout_mode = 1
offset_right = 1920.0
offset_bottom = 150.0

[node name="Label" type="Label" parent="UI/CenterContainer"]
layout_mode = 2
text = "PRESTIGE"
label_settings = ExtResource("32_qrlka")

[node name="CenterContainer2" type="CenterContainer" parent="UI"]
layout_mode = 1
offset_left = 1.0
offset_top = 860.0
offset_right = 1921.0
offset_bottom = 1079.0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/CenterContainer2"]
layout_mode = 2

[node name="Cancel" parent="UI/CenterContainer2/HBoxContainer" instance=ExtResource("13_4u7hf")]
layout_mode = 2
label = "Cancel"

[node name="Confirm" parent="UI/CenterContainer2/HBoxContainer" instance=ExtResource("13_4u7hf")]
layout_mode = 2
label = "Confirm Prestige"
variant = 1

[node name="CenterContainer3" type="CenterContainer" parent="UI"]
layout_mode = 0
offset_left = -26.0
offset_top = 860.0
offset_right = 494.0
offset_bottom = 1079.0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/CenterContainer3"]
layout_mode = 2

[node name="MoneyLabel" type="Label" parent="UI/CenterContainer3/HBoxContainer"]
layout_mode = 2
text = "$000m"
label_settings = ExtResource("36_bkh2h")

[node name="CenterContainer4" type="CenterContainer" parent="UI"]
layout_mode = 0
offset_left = 1463.0
offset_top = 859.0
offset_right = 1983.0
offset_bottom = 1078.0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/CenterContainer4"]
layout_mode = 2

[node name="TokenLabel" type="Label" parent="UI/CenterContainer4/HBoxContainer"]
layout_mode = 2
text = "Tokens: 0/3"
label_settings = ExtResource("36_bkh2h")

[node name="TextureRect" type="TextureRect" parent="UI/CenterContainer4/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_gys6d")

[node name="TextureRect2" type="TextureRect" parent="UI/CenterContainer4/HBoxContainer/TextureRect"]
modulate = Color(0, 0, 0, 1)
z_index = -1
layout_mode = 2
offset_top = 5.0
offset_right = 110.0
offset_bottom = 115.0
texture = ExtResource("4_gys6d")
